2nd-commiting-for-my-portfolio

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="container">
             <div class="row m-0">
               
-                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" cols="50">
                    <h2 id="heading">Let's grab a <span style="color: #f87652;">coffee</span> and jump on conversation <span style="color: #f87652;">chat</span> with me<span style="color: #f87652;">.</span> </h2>
                    <div>
                      <h5><span style="color: #f87652;">-----------------</span></h5>
@@ -125,13 +125,13 @@
                         <a href="https://www.facebook.com/passion.for.goal" target="_blank"><i class="fa fa-facebook-square animate__animated "></i></a> 
                         <a href="https://www.instagram.com/shashikant_001/" target="_blank"><i class="fa fa-instagram px-1 animate__animated"></i></a>  
                         <a href="https://twitter.com/Shashikant_03" target="_blank"><i class="fa fa-twitter-square animate__animated "></i></a>  
-                        <a href="https://www.linkedin.com/in/shashikant-shah-35b027221/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                        <a href="https://www.linkedin.com/in/shashikant-001/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                       </div>
                       <h5><span style="color: #17c92f;">What's app</span><span style="color: #f87652;">:-</span><br>+977 9845451010</h5>
                    </div>
                   </div>
                   <!-- about details -->
-                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12  about_me_right_section" id="about_me_right_section_id">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12  about_me_right_section" id="about_me_right_section_id" cols="50">
                     <H2 id="heading">About Me</H2>
                     <hr>
                     <p id="txt">My mission is develope the best websites around<span style="color: #f87652;">.</span></p>
@@ -431,7 +431,7 @@
               <a href="https://www.facebook.com/passion.for.goal" target="_balnk"><i class="fa fa-facebook-square animate__animated "></i></a> 
             <a href="https://www.instagram.com/shashikant_001/" target="_balnk"><i class="fa fa-instagram px-1 animate__animated"></i></a>  
              <a href="https://twitter.com/Shashikant_03" target="_balnk"><i class="fa fa-twitter-square animate__animated "></i></a> 
-             <a href="https://www.linkedin.com/in/shashikant-shah-35b027221/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+             <a href="https://www.linkedin.com/in/shashikant-001/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
             </div>
              </div>
              <div class=" col-lg-4 col-md-4 col-sm-12 col-12 column">
